can now read in the location data and shows a list of locations. If you click on a location it will take you to a empty details page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity
             android:name=".app.controllers.RegistrationActivity"
             android:label="@string/title_activity_registration"></activity>
+        <activity android:name=".app.controllers.LocationList" />
+        <activity android:name=".app.controllers.LocationDetailActivity"/>
     </application>
 
 </manifest>
