--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,12 @@
         <activity android:name=".app.controllers.HomePageActivity" />
         <activity
             android:name=".app.controllers.RegistrationActivity"
-            android:label="@string/title_activity_registration"></activity>
+            android:label="@string/title_activity_registration" />
         <activity android:name=".app.controllers.LocationList" />
-        <activity android:name=".app.controllers.LocationDetailActivity"/>
+        <activity android:name=".app.controllers.LocationDetailActivity" />
+        <activity
+            android:name=".DonationActivity"
+            android:label="@string/title_activity_donation"></activity>
     </application>
 
 </manifest>
