--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:label="@string/title_activity_inventory" />
         <activity
             android:name=".app.controllers.DonationDetailActivity"
-            android:label="@string/title_activity_donation_detail"></activity>
+            android:label="@string/title_activity_donation_detail" />
     </application>
 
 </manifest>
