seacrh activity completely works except for a bug that makes too many copies of the item

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".app.controllers.InventoryListActivity" />
         <activity android:name=".app.controllers.DonationDetailActivity" />
         <activity android:name=".app.controllers.AddDonationActivity"></activity>
+        <activity android:name=".app.controllers.SearchActivity" />
     </application>
 
 </manifest>
