--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,9 +45,10 @@
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You need a different API key for each encryption key, including the release key that
+             is used to sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and
+             src/release/.
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -55,7 +56,8 @@
 
         <activity
             android:name=".app.controllers.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps">
+        </activity>
     </application>
 
 </manifest>
